src/objects/TR1__ShiftWork__c.object
<CustomObject>
    <fields>
        <fullName>TR1__AmountBill__c</fullName>
        <label>Amount (Bill)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__AmountPay__c</fullName>
        <label>Amount (Pay)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__EndDateTime__c</fullName>
        <label>End Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__End_Time__c</fullName>
        <label>End Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Hours_Formula__c</fullName>
        <formula>(DATETIMEVALUE(TR1__EndDateTime__c) - DATETIMEVALUE(TR1__StartDateTime__c))*24</formula>
        <label>Hours Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Rate__c</fullName>
        <label>Rate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.TR1__Timesheet__c</field>
                <operation>equals</operation>
                <valueField>TR1__Rate__c.TR1__Timesheet__r.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>TR1__Rate__c</referenceTo>
        <relationshipLabel>Shift Works</relationshipLabel>
        <relationshipName>Shift_Works</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__StartDateTime__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Start_Time__c</fullName>
        <label>Start Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__TimeType__c</fullName>
        <formula>TR1__Rate__r.TR1__TimeType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__TimesheetDetail__c</fullName>
        <label>Timesheet Detail</label>
        <referenceTo>TR1__Timesheet_Detail__c</referenceTo>
        <relationshipLabel>Shift Works</relationshipLabel>
        <relationshipName>Shift_Works</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet</label>
        <referenceTo>TR1__Timesheet__c</referenceTo>
        <relationshipLabel>Shift Works</relationshipLabel>
        <relationshipName>Shift_Works</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Shift Work</label>
    <nameField>
        <displayFormat>SW-{MM}{DD}{YY}-{0}</displayFormat>
        <label>Shift Work Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shift Works</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TR1__Only_Unite_OR_Hours_should_be_entered</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  !ISBLANK(TR1__Hours__c),
  !ISBLANK(TR1__Units__c)
)</errorConditionFormula>
        <errorMessage>Only Units OR Hours should be entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Start_and_End_Date_comparision</fullName>
        <active>true</active>
        <errorConditionFormula>OR
(
   AND(
       !isBlank( TR1__StartDateTime__c ),
       !isBlank( TR1__EndDateTime__c ),
       (TR1__EndDateTime__c &lt;= TR1__StartDateTime__c)
      ),
   AND(
       isBlank( TR1__StartDateTime__c ),
       !isBlank( TR1__EndDateTime__c )
      )
)</errorConditionFormula>
        <errorMessage>End Date / Time should not be less/equal to Start Date/Time OR Start Date/Time should not be null when End Date / Time is entered.</errorMessage>
    </validationRules>
</CustomObject>